--- a/pages/hongbao.html
+++ b/pages/hongbao.html
@@ -34,7 +34,7 @@
     </div>
 
 	<!-- 兑换红包 -->
-    <div class="box">
+    <div class="box" style="display:block;">
         	<span class="span1">
             	<input type="text" class="input" style="padding-left:1px;">
         	</span>
@@ -44,25 +44,37 @@
     </div>
 
 	<!-- 红包信息 -->
-    <div id="hongbao_info">   
-	   <span class="span4">
+  <table id="yhq_table" class="table">
+    <!-- 红包 依次增加 -->
+    <tr>
+      <td class="td1">
+        <span class="span4">
           <p>XXXXX红包</p>
-		  <p>2016-10-01 至 2016-10-30</p>
+          <p>2016-10-01 至 2016-10-30</p>
         </span>
+      </td>
+      <td class="td2">
         <span class="span3">
-           <span>50.00元</span>
+          <span>50.00元</span>
         </span>
-    </div>
+      </td>
+    </tr>
 
-    <div id="hongbao_info">   
-	   <span class="span4">
+    <tr>
+      <td class="td1">
+        <span class="span4">
           <p>XXXXX红包</p>
-		  <p>2016-10-01 至 2016-10-30</p>
+          <p>2016-10-01 至 2016-10-30</p>
         </span>
+      </td>
+      <td class="td2">
         <span class="span3">
-           <span>50.00元</span>
+          <span>50.00元</span>
         </span>
-    </div>
+      </td>
+    </tr>
+
+  </table>
 
    <!-- 购物车隐藏层 -->
    <div id="fade" class="black_overlay">
@@ -77,9 +89,9 @@
         
         <div class="goods">
           <ul>
-        <li></li> 
-        <li></li>
-        <li></li>
+            <li></li> 
+            <li></li>
+            <li></li>
           </ul>
         </div>
 
@@ -94,13 +106,17 @@
     </div>
 
     <!-- footer -->
-		<div class="foot-toolbar menu">
-			<ul>
-				<a href="../index.html"><li class="line-right"><i class="fa fa-home"></i> 商城</li></a>
-				<a href="#"><li class="line-right"><i class="fa fa-user"></i> 会员</li></a>
-				<a id="cart" href="#"><li><i class="fa fa-shopping-cart"></i> 购物车</li></a>
-			</ul>
-		</div>
+    <div style="margin:12px auto 10px auto;display:block;border-bottom:solid 1px #cacaca;text-indent:-9999px;height:0px;width:100%;">我们是有底线的</div>
+    <div style="height:3em;max-width:768px;"></div>
+
+    <div class="foot-toolbar menu footer_nav">
+      <ul class="footer_nav-list">
+        <li class="line-right"><a class="nav-link" href="index.html"><i class="fa fa-home"></i> 商城 </a></li>
+        <li class="line-right"><a class="nav-link" href="#"><i class="fa fa-user"></i> 会员 </a></li>
+        <li><a class="nav-link" id="cart" href="#"><i class="fa fa-shopping-cart"></i> 购物车 <span class="nav-counter">4</span></a></li>
+      </ul>
+    </div>
+
    </div>
 </body>
 </html>
